@@ -1,5 +1,5 @@
 #pragma once
-#include "bezier.h"
+#include <bezier/bezier.h>
 
 #include <catch2/catch_test_macros.hpp>
 #include <catch2/matchers/catch_matchers_floating_point.hpp>
