@@ -7,6 +7,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Added
+
+- Add CMake INTERFACE target named bezier.
+
+### Changed
+
 - Move bezier.h from include/ to include/bezier/.
 
 ## [0.1.0] - 2023-08-08
